[gd_scene load_steps=3 format=3 uid="uid://dygb7v1ahdw2o"]

[ext_resource type="Script" uid="uid://5jlo1j42faem" path="res://scenes/ui/event_panel.gd" id="1_4lfgg"]

[sub_resource type="LabelSettings" id="LabelSettings_4lfgg"]
font_size = 24

[node name="EventPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4lfgg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_4lfgg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="VignetteDisplay" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 150)
layout_mode = 2
stretch_mode = 5

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 2
